Show page data on root

--- a/app/views/App/root.html
+++ b/app/views/App/root.html
@@ -3,7 +3,7 @@
 [ <a href="/new">new</a> ]
 
 <ul>
-    {{range .}}
+    {{range .pages}}
     <li>
         <a href="/view/{{.Title}}">{{.Title}}</a>
     </li>
