--- a/app/views/App/edit.html
+++ b/app/views/App/edit.html
@@ -1,6 +1,7 @@
 <p>
     [ <a href="/">home</a> ]
 </p>
+{{with .page}}
 <h1>Editing {{.Title}}</h1>
 
 <form action="/save/{{.Title}}" method="POST">
@@ -11,3 +12,4 @@
         <input type="submit" value="Save">
     </div>
 </form>
+{{end}}
